--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>TO DO LIST</title>
         <link rel="stylesheet" href="./assets/css/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="container">
@@ -25,6 +28,7 @@
 
             <div class="tasks-container"></div>
         </div>
+        <script src="https://kit.fontawesome.com/012ef634cc.js" crossorigin="anonymous"></script>
         <script src="./assets/scripts/scripts.js"></script>
     </body>
 </html>
